--- a/.gitignore
+++ b/.gitignore
@@ -1,18 +1,18 @@
-*.iml
-.gradle
 /local.properties
-/.idea/caches
-/.idea/libraries
-/.idea/modules.xml
-/.idea/workspace.xml
-/.idea/navEditor.xml
-/.idea/assetWizardSettings.xml
-.DS_Store
-/build
 /captures
+.DS_Store
+
+# IntelliJ
+*.iml
+.idea
+
+# Gradle files
+.gradle
+/build
+
+# External native build folder generated in Android Studio 2.2 and later
 .externalNativeBuild
 .cxx
 
-# Project exclude paths
-/app/build/
-/reviewscoreview/build/
+# Local configuration file (sdk path, etc)
+local.properties
